# irssi

./: .gitignore  configure.in
docs/: .gitignore
servertest/: .gitignore
src/core/: network-openssl.c
src/fe-common/irc/: .gitignore
src/fe-common/irc/notifylist/: .gitignore
src/fe-none/: .gitignore
src/fe-text/: .gitignore
src/irc/: .gitignore  Makefile.am
src/irc/bitserv/: Makefile.am  bitserv.c  bitserv.h  dump.c  listen.c  module.h
src/irc/irssicp/: Makefile.am  cli.py  irssicp.c
src/lib-config/: .gitignore
src/perl/: .gitignore
src/perl/common/: .gitignore
src/perl/irc/: .gitignore
src/perl/textui/: .gitignore
src/perl/ui/: .gitignore
